Trying to fix social network icons alignment

--- a/_scss/_content.scss
+++ b/_scss/_content.scss
@@ -244,9 +244,9 @@
   display: block;
   float: left;
   margin: 0;
-  padding: 0 15px;
+  padding: 0 55px;
   width: 14.2%;
-  height: 25px;
+  height: 55px;
   text-decoration: none;
   background-repeat: no-repeat;
   background-position: center center;
